PrometheusDemo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promdemo
spec:
  selector:
    app: promdemo
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
