PrometheusDemo/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promdemo
spec:
  backend:
    serviceName: promdemo
    servicePort: 80
